Add a profile_pic section

--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -27,10 +27,10 @@
         </div>
         <div class="col-md-4">
             <p> <b>Name:</b> {{user.firstname}} {{user.lastname}} </p>
-            <p><b> No of piches:</b> {{pitches}}</p>
+            <p><b> No of blogs:</b> {{pitches}}</p>
             <p><b> Date joined: </b>{{date}}</p>
         </div>
-
+       
         <div class="col-md-4">
             <h3>Add Your Bio </h3>
 
