--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <nav class="navbar navbar-dark default-color">
     <div class="container-fluid">
         <div class="navbar-header">
