call the authors and the quotes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,10 +2,13 @@
 
 {%block content%}
 
-<body>
-    <div>
-        
+<div class="container">
+    <h2>Welcome to Blog Website</h2>
 
-    </div>
-</body>
+
+    <p><b>Author</b> {{blogQuote.author}}</p>
+    <hr>
+    <p>{{blogQuote.quote}}</p>
+
+</div>
 {%endblock%}
