--- a/app/templates/myblogs.html
+++ b/app/templates/myblogs.html
@@ -5,14 +5,23 @@
 <div class="container">
     <div class="row">
         {%for blog in blogs%}
-        <div class="col-md-4">
-            <h1>{{blog.title_blog}}</h1>
-            <h3>{{blog.description}}</h3>
-            <h4>{{blog.user.username}}</h4>
-            <p class="date text-muted">Posted on ~ {{blog.date.strftime('%Y-%m-%d')}}</p>
-            <a href="{{url_for('main.view', id=blog.id)}}"><button >Comment</button></a>
-            <a href="{{url_for('main.delete', id=blog.id)}}"><button >Delete</button></a>
-            <a href="{{url_for('main.update_blog', id=blog.id)}}"><button >Update blog</button></a>
+        <div class=" col-md-4">
+            <div class="panel text-center" style="box-shadow: 0 4px 8px 0 rgba(15, 14, 14, 0.87);">
+                <div class="panel-head text-info">
+                    <h3>{{blog.title_blog}}</h3>
+                </div>
+                <hr>
+                <div class="panel-body">
+                    <p>{{blog.description}}</p>
+                    <p class="text-right text-muted"> <b>~ {{blog.user.username}} ~</b></p>
+                </div>
+                <div class="panel-footer">
+                    <p class="date text-muted">Posted on ~ {{blog.date.strftime('%Y-%m-%d')}}</p>
+                    <a href="{{url_for('main.view', id=blog.id)}}"><i class="fas fa-comment fa-fw"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="{{url_for('main.delete', id=blog.id)}}"><i class="fas fa-trash-alt fa-fw"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="{{url_for('main.update_blog', id=blog.id)}}"><i class="fas fa-marker fa-fw"></i></a>
+                </div>
+            </div>
         </div>
         {%endfor%}
     </div>
