Add all the styling

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,20 +12,24 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
             <div>
-                <h2 style="font-size: 80px; font-family: 'Lobster', cursive;  padding-top: 40px; text-align: center;">Welcome to Blog Website</h2>
+                <h2 style="font-size: 80px; font-family: 'Lobster', cursive;  padding-top: 40px; text-align: center;">
+                    Welcome to Blog Website</h2>
+                    <br><br>
+
+                <p>{{blogQuote.quote}}</p>
+                
+                <p class="text-right"><b>~ {{blogQuote.author}} ~</b> </p>
+
             </div>
         </div>
         <div class="col-md-2"></div>
     </div>
-   
-    
-
-<br><br>
-    <p><b>Author:</b> {{blogQuote.author}}</p>
-    
-    <p>{{blogQuote.quote}}</p>
 
 
-     
+
+
+
+
+
 </div>
 {%endblock%}
