--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+  /* overflow-x: hidden; */
 }
 .panel{
     box-shadow: 0 4px 8px 0 rgba(202, 33, 33, 0.2);
