deployment to heroku

--- a/app/templates/myblogs.html
+++ b/app/templates/myblogs.html
@@ -18,8 +18,10 @@
                 <div class="panel-footer">
                     <p class="date text-muted">Posted on ~ {{blog.date.strftime('%Y-%m-%d')}}</p>
                     <a href="{{url_for('main.view', id=blog.id)}}"><i class="fas fa-comment fa-fw"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    {% if blog.user == current_user%}
                     <a href="{{url_for('main.delete', id=blog.id)}}"><i class="fas fa-trash-alt fa-fw"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="{{url_for('main.update_blog', id=blog.id)}}"><i class="fas fa-marker fa-fw"></i></a>
+                    {% endif %}
                 </div>
             </div>
         </div>
